# gtk4_sliding_puzzle

./: README.md  meson.build
data/: github.aeldemery.gtk4_sliding_puzzle.gresource.xml
src/: Main.vala  MainWindow.vala  PuzzleBoard.vala  PuzzlePiece.vala
